<resources>
    <string name="app_name">Gift.zip</string>
    <string name="gift_zip_email">giftzip.team@gmail.com</string>
    <string name="login_kakao">카카오톡으로 로그인</string>
    <string name="notice_select_image">사진을 등록해보세요.</string>
    <string name="write_emotion_hint">지금 이 감정을 기록해 보세요.</string>
    <string name="write_name_from">From.&#160;</string>
    <string name="write_name_to">To.&#160;</string>
    <string name="write_name_hint">이름</string>
    <string name="write_date_picker_finish">확인</string>
    <string name="home_taken_button_name">받은</string>
    <string name="home_given_button_name">보낸</string>
    <string name="taken_main_string">새로운 선물을\n받았나요?</string>
    <string name="given_main_string">새로운 선물을\n보냈나요?</string>
    <string name="home_write_button_name">기록하기</string>
    <string name="write_frame">프레임</string>
    <string name="frame_square">정사각형</string>
    <string name="frame_oval">원</string>
    <string name="frame_window">창문</string>
    <string name="share_insta_title">instagram에 게시</string>
    <string name="share_insta_story">스토리</string>
    <string name="share_insta_feed">피드</string>
    <string name="home_detail_button_name">선물함</string>
    <string name="setting_title">설정 · 문의</string>
    <string name="setting_service">서비스 설정</string>
    <string name="setting_current_version">현재버전 1.1.0</string>
    <string name="setting_using_current_version">최신 버전 사용 중</string>
    <string name="setting_using_old_version">업데이트 필요</string>
    <string name="setting_about_us">기프트집에 대해</string>
    <string name="setting_user_support">사용자 지원</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_question">앱 문의 · 건의</string>
    <string name="setting_app_info">앱 정보</string>
    <string name="setting_terms_of_use">서비스 이용약관</string>
    <string name="setting_opensource_license">오픈 소스 라이센스</string>
    <string name="setting_privacy_policy">개인정보 이용방침</string>
    <string name="setting_logout">로그아웃</string>
    <string name="about_us_producers">Gift.zip team\n기프트집을 만든 사람들</string>
    <string name="designer">Designer</string>
    <string name="backend">Backend Dev</string>
    <string name="ios">iOS Dev</string>
    <string name="android">Android Dev</string>
    <string name="jiyoung">jiyoung Kim</string>
    <string name="soyoung">soyoung Kim</string>
    <string name="jinna">jinna Choi</string>
    <string name="jihye">jihye  Park</string>
    <string name="jaeyong">jaeyong Lee</string>
    <string name="jeonghun">jeonghun Choi</string>
    <string name="junho">junho Seo</string>
    <string name="yujin">yujin Jin</string>
    <string name="about_us_qna">기프트집팀에 궁금한점?</string>
    <string name="qna_title">Gift.zip 문의/건의 메일</string>
    <string name="qna_content">- 정확한 문의 파악을 위해 아래 정보를 작성해주세요!\n\n\n1. 문의 내용:\n\n2. 기프트집(카카오) 메일계정:\n\n★ 문의 관련 스크린샷을 첨부하시면\n보다 정확하고 빠른 확인이 가능합니다.</string>
    <string name="notice_none_data_text1">아직 공지 사항이 없습니다</string>
    <string name="notice_none_data_text2">추후에 확인해주세요</string>
    <string name="terms_detail_title">기프트집 서비스 이용약관\n</string>
    <string name="opensource_detail_title">기프트집 사용 오픈소스</string>
    <string name="privacy_detail_title">기프트집 이용자\n개인정보 처리방침\n</string>
    <string name="share_notice_title">선물.zip이 보관됐어요\n저장하거나 공유해보세요</string>
    <string name="share_notice_sub_title">받은 마음은 널리널리 자랑하기</string>
    <string name="share_notice_save_image">저장이 완료되었습니다.</string>
    <string name="search_latest_searched">내가 찾아 봤던</string>
    <string name="search_latest_delete">지우기</string>
    <string name="search_category">지금 찾는 선물의 종류는</string>
    <string name="search_situation">선물을 주고 받았던 상황은</string>
    <string name="search_person">그동안 주고 받은 사람들은</string>
    <string name="category_mobile_coupon">모바일교환권</string>
    <string name="category_fashion">패션</string>
    <string name="category_cosmetic">화장품</string>
    <string name="category_food">식품</string>
    <string name="category_voucher">상품권</string>
    <string name="category_digital">디지털</string>
    <string name="category_sports">스포츠</string>
    <string name="category_baby">육아용품</string>
    <string name="category_pet">애견</string>
    <string name="category_living">리빙</string>
    <string name="category_culture">문화</string>
    <string name="search_etc">기타</string>
    <string name="situation_birthday">생일</string>
    <string name="situation_anniversary">기념일</string>
    <string name="situation_getJob">취업</string>
    <string name="situation_housewarming">집들이</string>
    <string name="situation_wedding">결혼</string>
    <string name="situation_study">학업</string>
    <string name="situation_holiday">명절</string>
    <string name="situation_cheer">응원</string>
    <string name="situation_apology">사과</string>
    <string name="situation_thanks">감사</string>
    <string name="situation_noReason">그냥</string>
    <string name="search_auto_textView_hint">이름, 내용 검색</string>
    <string name="search_none_text1">검색 결과가 없습니다</string>
    <string name="search_none_text2">다른 키워드로 검색해보세요.</string>
    <string name="search_error_text1">문제가 생겼어요</string>
    <string name="search_error_text2">잠시 후 다시 시도해보세요.</string>
    <string name="search_result_taken">받은 선물</string>
    <string name="search_result_given">보낸 선물</string>
    <string name="home_default_taken">아직 받은 선물이 없어요\n상단 버튼을 통해\n선물집을 만들어봐요</string>
    <string name="home_default_given">아직 보낸 선물이 없어요\n상단 버튼을 통해\n선물집을 만들어봐요</string>
    <string name="login_guide_title1">주고 받은\n선물을 기록해보세요</string>
    <string name="login_guide_detail1">선물 종류부터 감정, 원하는 스티커까지</string>
    <string name="login_guide_title2">친구에게 기록을\n공유해보세요</string>
    <string name="login_guide_title3">선물 기록을\n차곡차곡 모아보세요</string>
    <string name="detail_edit">수정하기</string>
    <string name="detail_delete">삭제하기</string>
    <string name="detail_share">공유하기</string>
    <string name="detail_cancel">취소</string>
    <string name="detail_notice_edit_success">수정이 완료되었습니다.</string>
    <string name="sort_latest">최신순</string>
    <string name="sort_past">과거순</string>
    <string name="sticker_update_scheduled">업데이트 예정</string>
    <string name="setting_terms_detail">"제1조 (목적)

본 약관은 회원(본 약관에 동의한 자를 말합니다. 이하 “회원”이라고 합니다.) 이 gift.zip(이하 “회사”라고 합니다.) 이 제공하는 gift.zip 앱 서비스(이하 “서비스”라고 합니다.)를 이용함에 있어 회사와 회원의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.



제2조 (약관의 명시, 효력 및 개정)

1. 회사는 본 약관의 내용을 회원이 알 수 있도록 서비스 페이지 내에 항시 게시함으로써 이를 공지합니다.

2. 회사는 콘텐츠산업 진흥법, 정보통신망 이용촉진 및 정보보호 등 에 관한 법률, 약관의 규제에 관한 법률, 소비자기본법 등 관련 법령을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.

3. 회사가 약관을 개정할 경우에는 개정약관 및 개정약관의 시행일자와 개정사유를 명시하여 그 시행일자 15일 전부터 시행일 이후 상당한 기간동안 본 서비스 페이지에 게시하며, 개정된 약관은 그 시행일에 효력이 발생합니다. 단, 개정 내용이 회원에게 불리한 경우에는 그 시행일자 30일 전부터 시행일 이후 상당한 기간 동안 본 서비스 페이지에 게시하거나 팝업화면을 게시하는 등 이용자가 충분히 인지할 수 있는 합리적으로 가능한 방법으로 공지하며, 개정된 약관은 그 시행일에 효력이 발생됩니다.

4. 회사가 전항에 따라 회원에게 통지하면서 공지일로부터 개정약관시행일까지 거부의사를 표시하지 아니하면 승인한 것으로 본다는 뜻을 명확하게 고지하였음에도 불구하고 회원의 거부의 의사표시가 없는 경우에는 변경된 약관에 동의한 것으로 봅니다. 회원이 개정약관에 동의하지 않을 경우 회원은 제14조 제1항의 규정에 따라 이용 계약을 해지할 수 있습니다.



제3조 (약관 동의 및 서비스 이용계약의 체결)

1. 회사와 회원 간의 서비스 이용계약은 이용자가 본 약관 내용에 대해 동의하고 서비스 이용신청을 하면 회사가 그 신청을 승낙함으로써 성립합니다.

2. 회사는 이용자가 서비스 회원가입 페이지의 "동의함" 버튼을 클릭하거나 이용자가 본 서비스의 이용을 시작한 경우 본 약관에 동의한 것으로 간주합니다.

3. 회사는 이용자가 필수사항 등을 성실히 입력하여 서비스 이용신청을 완료하였을 때에는 신청 내용을 확인한 후 지체 없이 이를 승낙하여야 합니다. 단, 회사는 아래 각 호에 해당하는 경우에는 승낙을 유보할 수 있습니다.

① 서비스의 설비용량에 현실적인 여유가 없는 경우
② 서비스를 제공하기에는 기술적으로 문제가 있다고 판단되는 경우

4. 본 서비스 이용계약은 회사가 신청절차 상에서 가입완료를 표시한 시점에 성립합니다.



제4조 (개인정보의 보호 및 관리)

1. 회사는 서비스를 제공하기 위하여 회원으로부터 서비스 이용에 필요한 개인정보를 수집할 수 있습니다.

2. 회사는 관련 법령이 정하는 바에 따라 회원의 개인정보를 보호하기 위해 노력하며, 회원의 개인정보의 보호 및 사용에 대해서는 회사가 별도로 고지하는 개인정보 처리방침을 적용합니다.

3. 회사는 회사의 귀책 없이 회원의 귀책사유로 인하여 회원의 정보가 노출된 경우 이에 대해서는 책임을 지지 않습니다.



제5조 (게시물의 관리 및 임시조치)

1. 서비스 내 모든 게시물 및 콘텐츠(테마)의 관리 권한 및 책임은 해당 게시물 및 콘텐츠를 게시한 회원에게 있습니다. 단 회원의 요청이 있거나 기타 회사가 서비스의 원활한 운영을 위하여 필요하다고 판단되는 경우, 회사는 게시물의 관리 등과 관련한 사항을 개선,지원하는 등의 활동을 할 수 있습니다.

2. 회사의 게시물 등이 관련 법령에 위반되는 내용을 포함하는 경우, 회사는 해당 관련 법령이나 적법한 고권리자의 요청에 따라 해당 게시물 등에 대한 게시중단 및 삭제 등의 조치를 취할 수 있습니다.

3. 회사는 게시물 등에 회사의 약관 및 서비스 운영정책에 위반되는 사유가 있는 것으로 확인된 경우, 운영정책에 따라 해당 게시물에 대해 조치를 취할 수 있습니다.

4. 정보통신망 이용촉진 및 정보보호 등에 관한 법률(이하 “정보통신망법”이라 합니다)의 규정에 의해 다른 회원의 공개된 게시물 등이 본인의 사생활을 침해하거나 명예를 훼손하는 등 권리를 침해 받은 회원 또는 제3자(이하 “삭제 등 신청인” 이라 합니다)는 그 침해사실을 소명하여 회사에 해당 게시물 등의 삭제 또는 반박 내용의 게재를 요청할 수 있습니다. 이 경우 회사는 해당 게시물 등의 권리침해 여부를 판단할 수 없거나 당사자 간의 다툼이 예상되는 경우 해당 게시물 등에 대한 접근을 임시적으로 차단하는 조치 (이하 '임시조치'라 합니다)를 최장 30일까지 취합니다.

5. 전항에 의해 본인의 게시물 등이 임시조치 된 회원(이하 “게시자”라 합니다)은 임시조치기간 중 회사에 해당 게시물 등을 복원해 줄 것을 요청(이하 “재 게시 청구”라 합니다)할 수 있으며, 회사는 임시조치 된 게시물의 명예훼손 등 판단에 대한 방송통신심의위원회 심의 요청에 대한 게시자 및 삭제 등 신청인의 동의가 있는 경우 게시자 및 삭제 등 신청인을 대리하여 이를 요청하고 동의가 없는 경우 회사가 이를 판단하여 게시물 등의 복원 여부를 결정합니다. 게시자의 재 게시 청구가 있는 경우 임시조치 기간 내에 방송통신심의위원회 또는 회사의 결정이 있으면 그 결정에 따르고 그 결정이 임시조치 기간 내에 있지 않은 경우 해당 게시물 등은 임시 조치 만료일 이후 복원됩니다. 재 게시 청구가 없는 경우 해당 게시물 등은 임시조치 기간 만료 이후 삭제됩니다.

6. 회사는 서비스 내에 게시된 게시물 등이 원저작자의 중대한 권리를 침해한다고 인정하는 경우 회원 또는 제3자의 신고가 없는 경우에도 임시조치(이하 “임의의 임시조치”라 합니다)를 취할 수 있습니다.

7. 회원의 게시물 등으로 인한 법률상 이익 침해를 근거로, 원저작자가 회원 또는 회사를 대상으로 하여 민·형사상의 법적 조치를 취하는 경우, 회사는 동 법적 조치의 결과인 법원의 확정판결이 있을 때까지 관련 게시물 등에 대한 접근을 잠정적으로 제한할 수 있습니다. 게시물 등의 접근 제한과 관련한 법적 조치의 소명, 법원의 확정 판결에 대한 소명 책임은 당사자가 부담합니다.



제6조 (회원의 의무)

1. 회원은 아래 각 호에 해당하는 행위를 하여서는 안됩니다.

• 회사의 서비스에 게시된 정보를 변경하거나 이용하여 영리 또는 비영리의 목적으로 복제·출판·방송 등에 사용하거나 제3자에게 제공하는 행위
• 회사가 제공하는 서비스를 이용하여 제3자에게 본인을 홍보할 기회를 제공하거나 제3자의 홍보를 대행하는 등의 방법으로 금전을 수수하거나 서비스를 이용할 권리를 양도하고 이를 대가로 금전을 수수하는 행위
• 회사 기타 제3자 혹은 원저작자의 명예를 훼손하거나 저작권을 침해하는 등의 권리를 침해하는 행위
• 다른 회원의 계정을 도용하여 부당하게 서비스를 이용하는 행위
• 외설 또는 폭력적인 메시지·화상·음성 등이 담긴 내용을 게시하거나 공공질서 또는 공서양속에 반하는 정보를 공개 또는 게시하는 행위
• 정보통신망법 등 관련 법령에 의하여 그 전송 또는 게시가 금지되는 정보(컴퓨터 프로그램 등)를 전송 게시하거나 청소년보호법에서 규정하는 청소년유해매체물을 게시하는 행위
• 회사의 직원이나 서비스의 관리자를 가장하거나 사칭하여 또는 타인의 명의를 도용하여 게시물 등을 작성하거나 이메일을 발송 하는 행위
• 컴퓨터 소프트웨어, 하드웨어, 전기통신 장비의 정상적인 가동을 방해 파괴할 목적으로 고안된 소프트웨어 바이러스, 기타 다른 컴퓨터 코드 파일 프로그램을 포함하고 있는 자료를 게시하거나 다른 회원에게 발송하는 행위
• 스토킹(stalking), 스팸성 댓글의 게재 등 다른 회원의 정상적인 서비스 이용을 방해하는 행위
• 다른 회원의 개인정보를 그 동의 없이 수집·저장·공개하는 행위 광고 또는 선전 등 영리 목적으로 서비스를 이용하는 행위
• 회사가 제공하는 소프트웨어 등을 개작하거나 리버스 엔지니어링, 디컴파일, 디스어셈블 하는 행위
• 본 약관 및 회사가 규정한 서비스 운영정책을 위반하는 행위

2. 회사는 회원이 전항 각 호의 행위를 하는 경우 해당 게시물 등을 삭제 또는 임시 조치할 수 있고 회원의 서비스 이용을 제한하거나 그 사유가 중대한 경우 일방적으로 본 계약을 해지할 수 있습니다.

3. 회원이 본 조 제2항 각 호의 행위를 함으로써 회사에 손해가 발생한 경우, 회사는 해당 회원에 대해 손해배상을 청구할 수 있습니다.

4. 본 서비스 내에서 회사의 관여 없이 회원 간 이루어지는 일체의 행위(거래행위 포함)와 관련하여 발생하는 모든 의무와 책임은 해당 회원에게 있으며, 회사는 그 내용에 대하여 책임을 지지 않습니다.



제7조 (서비스 이용의 제한 및 중지)

1. 회사는 아래 각 호에 해당하는 사유가 발생한 경우에는 회원의 서비스 이용을 제한하거나 중지시킬 수 있습니다.

• 회원이 회사의 서비스 운영을 고의 또는 과실로 방해하는 경우
• 회원이 제6조의 의무를 위반한 경우
• 기타 중대한 사유로 인하여 회사가 해당 회원에 대해 서비스 제공을 지속하는 것이 상당하지 않다고 판단되는 경우

2. 회사는 전항의 규정에 의하여 서비스의 이용을 제한하거나 중지한 때에는 그 사유 및 제한 기간 등을 회원에게 알립니다.



제8조 (계정의 관리책임)

회원은 본인의 계정 관리에 대한 책임을 부담하며, 본인 계정을 제3 자가 무단 이용하는 등 회원의 귀책사유로 인해 발생하는 모든 불이익에 대한 책임을 부담합니다.



제9조(양도금지)

회원의 서비스 받을 권리는 이를 양도 내지 증여의 대상으로 하거나 질권의 목적으로 활용할 수 없습니다.



제 10 조 (이용계약의 해지)

1. 회원이 본 서비스 이용계약을 해지하고자 하는 때에는 회사가 제공하는 서비스 내의 회원탈퇴 기능을 이용하여 탈퇴를 요청할 수 있습니다. 회사는 탈퇴를 요청한 시점에서 불가피한 사정이 없는한 즉시 탈퇴요청을 처리합니다.

2. 본 이용 계약이 해지된 경우 회원의 게시물 등은 삭제됩니다. 단, 서비스 운영에 필요한 테마 등은 남을 수 있습니다.



제 11 조 (면책조항)

1. 회사는 다음 각 호의 사유로 서비스를 제공할 수 없는 경우 이로 인하여 회원에게 발생한 손해에 대해서는 책임을 부담하지 않습니다.

• 천재지변 또는 이에 준하는 불가항력의 상태가 있는 경우
• 제3자의 고의적인 서비스 방해가 있는 경우
• 회원의 귀책사유로 서비스 이용에 장애가 발생한 경우
• 제1호 내지 제3호를 제외한 기타 회사의 고의·과실이 없는 사유로 서비스를 제공하는 것이 어려운 경우

2. 회사는 회원이 작성하여 서비스에 게재된 정보 및 자료의 신뢰도나 정확성 등에 대해서는 보증을 하지 않으며 이로 인해 발생한 회원의 손해에 대하여는 책임을 부담하지 아니합니다.



제 12 조 (회원에 대한 통지)

회사가 회원에 대한 통지를 하는 경우, 본 약관에 별도 규정이 없는한 회원이 회사에 제공한 이메일 주소로 통지할 수 있습니다.



제 13 조 (약관의 해석)

본 약관에 명시되지 않은 사항에 대해서는 회사와 회원 간 합의하여 결정하고, 합의가 되지 않는 경우 관련 법령 또는 상관례에 따릅니다.



제 14 조 (준거법 및 재판관할)

1. 본 약관은 대한민국법에 의하여 규정되고 이행되며, 회사와 회원간에 제기된 소송에는 대한민국법을 적용합니다.

2. 서비스 이용과 관련하여 회사와 회원 간에 발생한 분쟁은 서울중앙지방법원 또는 민사소송법 상의 관할법원에 제기합니다.

본 약관은 2021년 2월 20일부터 적용됩니다.


        "</string>
</resources>