<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nexters.giftarchiving.viewmodel.SearchViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_layout"
        android:background="@color/settingsBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SearchFilterFragment"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_latest_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/search_latest_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/search_latest_searched"
                android:textColor="@color/settingsGray"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/search_latest_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="@id/search_latest_textView"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/search_latest_delete"
                android:textColor="@color/settingsGray"
                android:textSize="14sp"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/search_latest_viewPager2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/search_latest_textView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/search_category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_latest_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/search_category"
            android:textSize="14sp"
            android:textColor="@color/settingsGray"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/category_mobile_coupon"
            android:layout_width="107dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_mobile_coupon"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/search_category_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:onClick="@{viewModel.onClickCategoryListener}"/>

        <Button
            android:id="@+id/category_fashion"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_fashion"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_mobile_coupon"
            app:layout_constraintLeft_toRightOf="@id/category_mobile_coupon"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_cosmetic"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_cosmetic"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_mobile_coupon"
            app:layout_constraintLeft_toRightOf="@id/category_fashion"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_food"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_food"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_mobile_coupon"
            app:layout_constraintLeft_toRightOf="@id/category_cosmetic"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_voucher"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_voucher"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/category_mobile_coupon"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_digital"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_digital"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_voucher"
            app:layout_constraintLeft_toRightOf="@id/category_voucher"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_sports"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_sports"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_voucher"
            app:layout_constraintLeft_toRightOf="@id/category_digital"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_baby"
            android:layout_width="81dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_baby"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_voucher"
            app:layout_constraintLeft_toRightOf="@id/category_sports"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_pet"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_pet"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/category_voucher"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_living"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_living"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_pet"
            app:layout_constraintLeft_toRightOf="@id/category_pet"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_culture"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/category_culture"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_pet"
            app:layout_constraintLeft_toRightOf="@id/category_living"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <Button
            android:id="@+id/category_etc"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/search_etc"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/category_pet"
            app:layout_constraintLeft_toRightOf="@id/category_culture"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickCategoryListener}"
            />

        <TextView
            android:id="@+id/search_situation_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category_pet"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/search_situation"
            android:textSize="14sp"
            android:textColor="@color/settingsGray"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:onClick="@{viewModel.onClickReasonListener}"/>

        <Button
            android:id="@+id/situation_birthday"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_birthday"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/search_situation_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_anniversary"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_anniversary"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_birthday"
            app:layout_constraintLeft_toRightOf="@id/situation_birthday"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_getJob"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_getJob"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_birthday"
            app:layout_constraintLeft_toRightOf="@id/situation_anniversary"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_housewarming"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_housewarming"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_birthday"
            app:layout_constraintLeft_toRightOf="@id/situation_getJob"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_wedding"
            android:layout_width="68dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_wedding"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_birthday"
            app:layout_constraintLeft_toRightOf="@id/situation_housewarming"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_study"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_study"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/situation_birthday"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_holiday"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_holiday"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_study"
            app:layout_constraintLeft_toRightOf="@id/situation_study"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_cheer"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_cheer"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_study"
            app:layout_constraintLeft_toRightOf="@id/situation_holiday"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_apology"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_apology"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_study"
            app:layout_constraintLeft_toRightOf="@id/situation_cheer"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_thanks"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_thanks"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_study"
            app:layout_constraintLeft_toRightOf="@id/situation_apology"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_noReason"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/situation_noReason"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/situation_study"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <Button
            android:id="@+id/situation_etc"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:background="@drawable/tag_button"
            android:text="@string/search_etc"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/situation_noReason"
            app:layout_constraintLeft_toRightOf="@id/situation_noReason"
            android:layout_marginStart="6dp"
            android:onClick="@{viewModel.onClickReasonListener}"
            />

        <TextView
            android:id="@+id/search_person_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/situation_noReason"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/search_person"
            android:textSize="14sp"
            android:textColor="@color/settingsGray"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_person_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/search_person_textView"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>