<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nexters.giftarchiving.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        tools:context=".ui.TakenFragment">

        <TextView
            android:id="@+id/taken_main_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taken_main_string"
            android:textSize="26sp"
            android:lineHeight="36sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/write_taken_button"
            android:layout_marginStart="24dp"/>

        <Button
            android:id="@+id/write_taken_button"
            android:layout_width="74dp"
            android:layout_height="35dp"
            android:text="@string/home_write_button_name"
            android:background="@drawable/writing_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/taken_main_textview"
            app:layout_constraintLeft_toLeftOf="@id/taken_main_textview"
            app:layout_constraintBottom_toTopOf="@id/home_taken_viewpager"
            android:textSize="14sp"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_taken_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="100dp"
            />

        <Button
            android:id="@+id/taken_detail_button"
            android:text="@string/home_detail_button_name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_icon_right_arrow"
            app:layout_constraintTop_toTopOf="@id/home_taken_viewpager"
            app:layout_constraintRight_toRightOf="@id/home_taken_viewpager"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginEnd="23.5dp"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>